--- a/text/ESPintegration.tex
+++ b/text/ESPintegration.tex
@@ -1,9 +1,9 @@
-The EE HPC WG Team took as their starting point a
+The EE HPC WG took as their starting point a
 model developed by LBNL's Demand Response Research
 Center that describes strategies that datacenters might em-
 ploy for utility programs to manage their electricity and
 power requirements to lower costs and benefit from utility
-incentives. The EE HPCWG Team adopted this model with
+incentives. The EE HPC WG adopted this model with
 slight tweaks to reflect the supercomputing environment
 focus (versus the datacenter as described by LBNL`s Demand
 Response Research Center).
