Software doesn't quite exist yet...

--- a/text/intro.tex
+++ b/text/intro.tex
@@ -47,7 +47,8 @@ This integration model describes programs that are used by some of the electrici
 service providers to encourage particular responses by their customers and methods 
 used to balance the electrical grid supply and demand.
 Perhaps one of the most straightforward ways that SCs can begin
-the process of participating in demand response is by using this existing software 
+the process of participating in demand response is by participating in efforts to
+develop software
 infrastructure to manage their electricity requirements in a tightly coupled manner 
 with their ESPs, facilitating both energy efficiency and grid reliability.
 
