Removed "nosep" in order to build.

--- a/text/questions.tex
+++ b/text/questions.tex
@@ -3,7 +3,7 @@
 This should be the same as the total facility energy number that is used for calculating PUE, 
 as defined by the Green Grid Whitepaper \#49.  Total facility energy includes all 
 HPC equipment energy plus everything that supports the HPC equipment using energy, such as:
-\begin{itemize} [nosep]
+\begin{itemize} %[nosep]
 \item[{-}]
 Power delivery components, including UPS systems, switchgear, generators, batteries, power 
 distribution units (PDUs), and distribution losses external to the IT equipment  
@@ -104,7 +104,7 @@ Please describe.
 \noindent
 \textbf{Please evaluate as high, medium or low the MW impact of each of these strategies as a 
 response to a grid request. }
-\begin{itemize} [nosep]
+\begin{itemize} %[nosep]
 \item[{-}] Power capping	
 \item[{-}] Load migrations	
 \item[{-}] Temperature adjustments	
