--- a/text/surveysummary.tex
+++ b/text/surveysummary.tex
@@ -31,7 +31,7 @@ the nature of that communication in the comments.
 \end{itemize}
 
 \subsection*{Facility Energy}
-\begin{enumerate}  [nosep]
+\begin{enumerate}  %[nosep]
 \item
 What is your ``total facility energy?''
 
@@ -59,7 +59,7 @@ Maintenance periods.''
 
 \subsection*{Management and Control}
 
-\begin {enumerate} [nosep]
+\begin {enumerate} %[nosep]
 \setcounter{enumi}{7}
 \item
 COARSE-GRAINED POWER MANAGEMENT: manage power for the HPC system or subsystem 
@@ -102,7 +102,7 @@ Please describe.
 Please evaluate as high, medium or low the MW impact of each of these strategies 
 as a response to a grid request. 
 
-\begin{itemize} [nosep]
+\begin{itemize} %[nosep]
 \item[{-}]
 Power capping 
 \item[{-}]
@@ -128,7 +128,7 @@ Back-up resources
 
 \subsection*{Electrical Utility/Provider Information}
 
-\begin{enumerate} [nosep]
+\begin{enumerate} %[nosep]
 \setcounter{enumi}{18}
 \item
 PEAK SHEDDING: Utility provider arrangements used to reduce peak load, where the reduced 
