--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -2,7 +2,7 @@ Some of the largest supercomputer centers in the United States are developing
 new relationships with their electricity service providers. 
 These relationships, similar to other commercial and industrial partnerships, are 
 driven by mutual interest to reduce energy costs and improve electrical grid reliability.
-Supercomputer centers are concerned about quality, environmental 
+Supercomputer centers are concerned about electricity quality, environmental 
 impact and availability,
 while electricity service providers are concerned about impacts
 on electrical grid reliability, particularly in terms of energy consumption, peak power and power fluctuations.
