--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -18,7 +18,7 @@ energy savings with only negligible slowdown.~\cite{rountree:09} These
 techniques were also applied to non-MPI data center workloads.~\cite{femal:04}. 
 
 Other power saving approaches were attempted that did not use DVFS, but most
-were not deemed relevant to the supercomputing environment.  A notable expection
+were not deemed relevant to the supercomputing environment.  A notable exception
 is Dynamic Concurreny Throttling, where energy savings are realized by varying
 the number of threads at runtime.~\cite{Curtis1,Curtis2,Curtis3} 
 
