--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -62,8 +62,8 @@ and environmental factors.
 
 It is implicit in the ASHRAE guidelines that a supercomputer center might be
 able to increase temperature as a response to a request from an energy service
-provider.  The guideline defines both “recommended” and
-“allowable” environmental ranges.  It also specifies a maximum rate of
+provider.  The guideline defines both recommended and
+allowable environmental ranges.  It also specifies a maximum rate of
 change, which is most stringent for tape drives.  For supercomputer centers, the
 difference between the maximum recommended and allowable dry bulb temperature is
 a minimum of 9 degrees F.  The rate of change for tape drives is 9 degrees F per
