--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -5,10 +5,10 @@ correlated and driven by energy policies in the country.
 \cite{torriti_demand_2010}.
 
 Nineteen Top100 List sized sites in the United States were targeted for the
-questionnaire. Eleven sites responded (Oak Ridge National Laboratory, 
-Lawrence Livermore National Laboratory, 
-Argonne National Laboratory, 
-Los Alamos National Laboratory, LBNL, 
+questionnaire. Eleven sites responded (Oak Ridge National Laboratory (ORNL), 
+LLNL, 
+ANL, 
+Los Alamos National Laboratory (LANL), LBNL, 
 Wright Patterson Air Force Base,
 National Oceanic Atmospheric Administration (NOAA), 
 National Center for Supercomputing Applications, 
