--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -36,7 +36,7 @@ ancillary systems such as power delivery and cooling components.
 There were four sites with total power load greater
 than 10MW, two sites with \textasciitilde 5MW total power load and five
 sites with less than 2MW total power load. For those with total power load greater than 10MW, the
-intra-hour fluctuation varied from less than 3MW to 8MW. One of
+intra-hour fluctuation (maximum variability) varied from less than 3MW to 8MW. One of
 \textasciitilde 5MW sites said that they experienced 4MW variability. We chose less than 3MW intra-hour
 variability as the bottom of the scale because we assumed that the
 electricity providers would not be affected by 3MW (or less) 
