--- a/text/questionnaire.tex
+++ b/text/questionnaire.tex
@@ -182,7 +182,7 @@ organization at the site level and outside of their immediate control.
 
 Eighty percent of the respondents have not had discussions with their
 electricity providers about congestion, regulation and frequency
-response. Los Alamos National Laboratory (LANL) is one of two who have had discussions and who commented that
+response. LANL is one of two who have had discussions and who commented that
 they are ``learning about the process'' and that it is ``outside of [their] visibility or control''.
 
 There were many more respondents who have had discussions with their
@@ -196,7 +196,7 @@ and not unique to the supercomputer center.
 An open-ended question was posed as to whether or not there was information
 either requested of the supercomputer sites by their providers or,
 conversely, requested of the providers by the sites. In both cases, well
-over 75{\%} of the respondents answered no. Lawrence Livermore National Laboratory (LLNL) and LANL were the
+over 75{\%} of the respondents answered no. LLNL and LANL were the
 exceptions. LLNL is ``responding to requests for additional data on an hourly, 
 weekly and monthly basis."  They are also working to develop an automated capability to share 
 data with their electricity providers, which would provide automated additional 
