--- a/text/opportunities.tex
+++ b/text/opportunities.tex
@@ -2,11 +2,9 @@ The responses to the questionnaire presented in
 Section~\ref{sec:questionnaire} represent a variety of desires and
 experience regarding interactions between supercomputer centers and
 electricity service providers.  For example, the responses from the two centers
-with the largest power draws, Lawrence Livermore National Laboratory
-(LLNL) and Oak Ridge National Laboratory (ORNL), diverge in several
+with the largest power draws, LLNL and ORNL, diverge in several
 areas.  This divergence is perhaps primarily due to characteristics of
-their respective electricity service providers.  In contrast, San Diego
-Supercomputer Center (SDSC) stands out as a leader in integrating
+their respective electricity service providers.  In contrast, SDSC stands out as a leader in integrating
 with their electricity service provider on a site-wide level.  To that end, the
 responses from SDSC may exemplify some of the opportunities available
 to other supercomputer centers that are willing to pursue this degree
