--- a/text/intro.tex
+++ b/text/intro.tex
@@ -52,6 +52,12 @@ develop software
 infrastructure to manage their electricity requirements in a tightly coupled manner 
 with their ESPs, facilitating both energy efficiency and grid reliability.
 
+Our analysis focused on supercomputer centers in the United States, however, the 
+findings may also relate to centers in other countries with similar practices and markets.  
+The electric grid infrastructure and markets are highly dependent upon governmental regulations 
+vary across geographies.  This is why we made the decision to restrict the initial analysis to the United States.  
+Future work will extend the analysis to Europe and other geographies.
+
 The paper is organized as follows.
 Sections~\ref{sec:ESPintegration} and~\ref{sec:supercomputercenters} of this paper
 describe in greater detail the model for 
