added ASHRAE pub

--- a/bib/whitepaper.bib
+++ b/bib/whitepaper.bib
@@ -1,3 +1,12 @@
+@BOOK{
+   AUTHOR = {ASHRAE},
+   TITLE = {Thermal Guidelines for Data Processing Environments, Special Publication},
+   PUBLISHER = {American Society of Heating, Refrigerating and Air-Conditioning Engineers, Inc.},
+   ADDRESS = {Atlanta, GA},
+   EDITION = {Third},
+   YEAR = {2012},
+}
+
 @TECHREPORT{LBNL-6560E,
   AUTHOR =        {Girish Ghatikar and David Riess and Mary Ann Piette},
   TITLE =         {Analyis of Open Automated Demand Response Deployments in California and Guidelines to Transition to Industry Standards},
