added citation code

--- a/bib/whitepaper.bib
+++ b/bib/whitepaper.bib
@@ -1,4 +1,4 @@
-@BOOK{
+@BOOK{ASHRAE:tgfdpe,
    AUTHOR = {ASHRAE},
    TITLE = {Thermal Guidelines for Data Processing Environments, Special Publication},
    PUBLISHER = {American Society of Heating, Refrigerating and Air-Conditioning Engineers, Inc.},
