added ASHRAE ref

--- a/text/priorwork.tex
+++ b/text/priorwork.tex
@@ -53,7 +53,7 @@ thermally aware job scheduling.
 In 2011, the American Society of Heating, Refrigeration and Air Conditioning
 (ASHRAE) data center Technical Committee TC9.9 published guidelines that
 expanded the environmental range for data centers and supercomputer
-centers. The environmental range includes factors such as temperature, humidity
+centersr~\cite{ASHRAE:tgfdpe}.  The environmental range includes factors such as temperature, humidity
 and dew point and allowable rate of change.  This expansion allows for
 maintaining high reliability while achieving gains in energy efficiency.  These
 guidelines continue to be updated and the range continues to expand as the
